# execution

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/actors/: CMakeLists.txt  main.cpp  system.cpp  system.hpp
examples/linux/: CMakeLists.txt
examples/linux/echo_tcp/: CMakeLists.txt  accept.hpp  context.hpp  main.cpp  read_some.hpp  write.hpp
examples/linux/uring/: CMakeLists.txt
examples/linux/uring/include/uring/: accept.hpp  close.hpp  context.hpp  read_some.hpp  uring.hpp  write.hpp
examples/linux/uring_demo/: CMakeLists.txt  context.hpp  main.cpp
examples/linux/uring_tcp/: CMakeLists.txt  accept.hpp  close.hpp  context.hpp  main.cpp  read_some.hpp  write.hpp
examples/user_input/: CMakeLists.txt  commands.hpp  main.cpp  read_user_input.hpp
lib/: CMakeLists.txt
lib/include/execution/: bulk.hpp  conditional.hpp  customization.hpp  ensure_started.hpp  finally.hpp  forward_receiver.h  forward_receiver.hpp  get_completion_scheduler.hpp  get_scheduler.hpp  just.h  just.hpp  just_stopped.hpp  let_value.h  let_value.hpp  meta.hpp  null_receiver.h  null_receiver.hpp  on.hpp  pipeable.hpp  receiver_of.hpp  repeat_effect_until.hpp  schedule.hpp  sender.h  sender_of.hpp  sender_traits.h  sender_traits.hpp  sequence.hpp  set_error.hpp  set_stopped.hpp  set_value.hpp  simple_thread_pool.hpp  simple_thread_pool_bulk.hpp  simple_thread_pool_impl.hpp  simple_thread_pool_scheduler.hpp  start_detached.hpp  stop_token.hpp  stop_when.hpp  submit.hpp  sync_wait.hpp  task_queue.hpp  (+16 more)
lib/include/execution/linux/: io_uring.hpp
lib/include/execution/linux/io_uring/: accept.hpp  context.hpp  write.hpp
lib/source/: io_uring_context.cpp  simple_thread_pool.cpp  thread_pool.cpp  timed_thread_pool.cpp
test/: CMakeLists.txt  bulk_test.cpp  conditional_test.cpp  ensure_started_test.cpp  finally_test.cpp  just_stopped_test.cpp  just_test.cpp  let_value_test.cpp  meta_test.cpp  on_test.cpp  repeat_effect_test.cpp  sender_of_test.cpp  sequence_test.cpp  simple_thread_pool_test.cpp  start_detached_test.cpp  stop_when_test.cpp  submit_test.cpp  sync_wait_test.cpp  test_receiver.h  test_receiver.hpp  then_test.cpp  thread_pool_test.cpp  transfer_just_test.cpp  type_list_test.cpp  upon_error_test.cpp  upon_stopped_test.cpp  when_all_test.cpp
test/linux/: io_uring_test.cpp
